plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.11'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'idea'
}

group = 'com.goodee'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// 1. 개발 시 CSS/HTML 수정 시 서버 재시작 없이 바로 반영 (강력 추천)
	// developmentOnly 'org.springframework.boot:spring-boot-devtools'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
	implementation 'org.jsoup:jsoup:1.17.2'
	implementation 'com.microsoft.playwright:playwright:1.49.0'
  	implementation 'org.springframework.boot:spring-boot-starter-webflux' // WebClient 사용

	runtimeOnly 'com.mysql:mysql-connector-j'

	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
	implementation "org.springframework.boot:spring-boot-starter-mail"
	// WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// 저 테스트에서 로그가 안 찍혀서 추가해봤어요 -시현
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	// MapStruct
	implementation 'org.mapstruct:mapstruct:1.6.3'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

	implementation 'org.apache.tika:tika-core:3.2.3'

	// PDF 생성 (Flying Saucer + iText)
	implementation 'org.xhtmlrenderer:flying-saucer-pdf:9.11.4'

	// JPA Metamodel Generator (컴파일 시점에 _ 클래스 생성)
	annotationProcessor 'org.hibernate.orm:hibernate-jpamodelgen'
  
	// 레디스
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Source: https://mvnrepository.com/artifact/net.coobird/thumbnailator
	implementation("net.coobird:thumbnailator:0.4.21")
}

tasks.named('test') {
	useJUnitPlatform()

	// 테스트 실패해도 빌드를 멈추지 않고 계속 진행 (리포트 생성을 위해)
	ignoreFailures = true

	finalizedBy jacocoTestReport
}